Updated answer to task 5 in report

--- a/G/G-final.tex
+++ b/G/G-final.tex
@@ -5,6 +5,7 @@
 \usepackage{multicol} 			% for column layout
 \usepackage[utf8]{inputenc} 	% can we has UTF-8, plox
 \usepackage{listings}           % for embedded code
+\usepackage{enumerate}
 
 \title%
 {%
@@ -210,14 +211,49 @@ To do this we first had to brush up our understanding of call-by-value-result. W
 
 We started by modifying our callFun function and implementing the function {\tt updateOuterVtable}. We were trying to do a bit much in that function but was able to keep it simple in the end. One of the problems was to call the function on multiple variables, but that was accomplished with a map function.
 
-In an attempt to solve the Code Generator-part of Task 5, we tried to update our compiler to:
+In an attempt to solve the Code Generator-part of Task 5, we tried changing the
+following in our compiler:
 \begin{enumerate}[i]
-    \item Utilise the ``general-purpose'' {\tt compileStmt}-case for {\tt
-        ProcCall}, to include a {\tt movebackcode} value, retrieving (ii) and
-        setting (iii) the updated (or perhaps rather {\it all}) values in vtab.
-    \item 
-\end{enumerate}
-        
+    \item Utilise the ``general-purpose'' {\tt compileStmt}-case for {\tt ProcCall},
+        to include a {\tt movebackcode} value, retrieving (ii) and
+        setting the updated (or perhaps rather {\it all}\/) values in vtab.
+    \item Include a function {\tt resArgs}, to be called by the above, reversing
+        the functionality of {\tt putArgs} (i.e.\ generate the assembly code to
+        set the values of the formal arguments from callers to the values set
+        in their respective callees.\\
+        This did not work and is commented out in our source code, hence the
+        {\it call-by-value-result}\/ evaluation strategy is not functional in
+        Paladim programmes compiled by our compiler. The listing below shows
+        the {\tt resArgs} function.\\
+        The reason it did not work is that we did not find a way to retrieve
+        the proper registers used when {\tt putArgs} was called. One way this
+        could have been solved --- however inefficient it might have been ---
+        would have been to update {\tt putArgs} to store the values in a
+        seperate location, and then traversing this location when calling
+        {\tt resArgs}. It is suspected that such functionality could have
+        been provided by {\tt compileF}.
+    \item Since the above did not work and we were being pressed for time
+        we did not implement anything in {\tt compileF}, although that might
+        have solved our problem.
+\end{enumerate} 
+
+\begin{lstlisting}
+    and resArgs [] vtable reg = ([], reg)
+      | resArgs (e::es) vtable reg =
+      let
+        val t1 = "_funarg_"^newName()
+        val code1 = compileExp(vtable, e, t1)
+        val (code2, minreg) = resArgs es vtable (reg - 1)
+
+        val sym = case e of 
+            LValue( Var(id), _)      => SOME id
+          | LValue( Index(id, _), _) => SOME id
+          | _                        => NONE
+      
+      in if not(Option.isSome sym) then (code2, minreg)
+         else (code1 @ code2 @ [Mips.MOVE (t1, makeConst reg)], minreg)
+      end
+\end{lstlisting}
 
 \subsubsection*{Tests}
 Task 5 has not been completed yet, so we cannot test it properly 
