--- a/G/Compilers-2013/DOC/G-final.tex
+++ b/G/Compilers-2013/DOC/G-final.tex
@@ -199,17 +199,18 @@ We have gotten bound checking to work by running through the list of indices and
 Flatten array was hard to get working correctly. We accomplsihed it, when some of our errors had been pointed out and we were able to implement it correctly.
 
 \subsubsection*{Tests}%
-Task 4 has not been completed yet, so we cannot test it properly.
-\\
-
-We used {\tt arrays.pal}, {\tt simple.pal}, {\tt fibArray.pal} and {\tt fibWhile.pal} to test the array indexing. We had to use the two fibonacci programs to ensure that the error messages were consistent. They all 
+We used {\tt arrays.pal}, {\tt simple.pal}, {\tt fibArray.pal} and
+{\tt fibWhile.pal} to test the array indexing. We had to use the two fibonacci
+programs to ensure that the error messages were consistent, before we finally
+realised (with the help of Cosmin) how to properly calculate the array strides.
 
 \subsection*{Semantics}
-Task 5 is about replacing call-by-value with call-by-value-result. To do this, we have to change the procedures policy by modifying callFun in {\tt TpInterpret.sml} and modifying compileF and compileStmt in {\tt compile.sml}.
+Task 5 is about replacing call-by-value with call-by-value-result. To do this, we have to change the procedures policy by modifying callFun in {\tt TpInterpret.sml} and creating a new helper function to support the needed modifications to compileF and compileStmt in {\tt compile.sml}.
 
-To do this we first had to brush up our understanding of call-by-value-result. We had our understading from the lectures but were still not sure about how to implement it in our compiler.
+To do this we first had to brush up our understanding of call-by-value-result. We had our understading from the lectures but were still unsure as to how we were to implement it in our compiler.
 
-We started by modifying our callFun function and implementing the function {\tt updateOuterVtable}. We were trying to do a bit much in that function but was able to keep it simple in the end. One of the problems was to call the function on multiple variables, but that was accomplished with a map function.
+We started by modifying our callFun function and implementing the function {\tt updateOuterVtable}. We were trying to do a bit much in that function but was able to keep it simple in the end. One of the problems was to call the function on multiple variables, but that was accomplished with a {\tt ListPair.map} function,
+mapping over both the formal and the actual arguments in the function call.
 
 In an attempt to solve the Code Generator-part of Task 5, we tried changing the
 following in our compiler:
@@ -256,7 +257,14 @@ following in our compiler:
 \end{lstlisting}
 
 \subsubsection*{Tests}
-Task 5 has not been completed yet, so we cannot test it properly 
+The Interpreting section of this task was tested with both {\tt proctest.pal} and
+{\tt callbyvalueresult.pal} (a programme we implemented, which corresponds to the
+pseudo-code given in the assignment pdf).\\
+These tests both indicated that our Interpreter correctly enforced the
+call-by-value-result evalutaion strategy we implemented.
+
+Insofar as the compiler section was tested during our trial and error, it was
+done by building Paladim, and when it did build, by running Paladim with the
+same files as above.
 
 \end{document}
-
